--- a/app/src/main/res/layout/album_cover_frag.xml
+++ b/app/src/main/res/layout/album_cover_frag.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/album_cover_iv"
+                android:id="@+id/albumCover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
