--- a/app/src/main/res/layout/mini_player_frag.xml
+++ b/app/src/main/res/layout/mini_player_frag.xml
@@ -32,7 +32,7 @@
             android:padding="4dp">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/mini_player_album_cv"
+                android:id="@+id/miniPlayerAlbumCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -50,7 +50,7 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                android:id="@+id/mini_player_menu_ll"
+                android:id="@+id/miniPlayerMenuLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -59,7 +59,7 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/mini_player_status_iv"
+                    android:id="@+id/miniPlayerStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
@@ -69,7 +69,7 @@
                     tools:src="@drawable/ic_play_circle_outline_black_24dp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/mini_player_list_iv"
+                    android:id="@+id/miniPlayerListIv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -81,14 +81,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/mini_player_menu_ll"
-                android:layout_toLeftOf="@id/mini_player_menu_ll"
-                android:layout_toEndOf="@id/mini_player_album_cv"
-                android:layout_toRightOf="@id/mini_player_album_cv"
+                android:layout_toStartOf="@id/miniPlayerMenuLayout"
+                android:layout_toLeftOf="@id/miniPlayerMenuLayout"
+                android:layout_toEndOf="@id/miniPlayerAlbumCard"
+                android:layout_toRightOf="@id/miniPlayerAlbumCard"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mini_player_title_tv"
+                    android:id="@+id/miniPlayerTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -100,7 +100,7 @@
                     tools:text="极乐净土极乐净土极乐净土极乐净土极乐净土" />
 
                 <TextView
-                    android:id="@+id/mini_player_artist_tv"
+                    android:id="@+id/miniPlayerArtist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
