--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -34,7 +34,7 @@
             app:cardElevation="0dp">
 
             <ImageView
-                android:id="@+id/music_item_album_cover"
+                android:id="@+id/musicItemAlbumCover"
                 android:layout_width="@dimen/album_cover_size_list"
                 android:layout_height="@dimen/album_cover_size_list"
                 android:contentDescription="@null"
@@ -55,7 +55,7 @@
                 android:paddingBottom="4dp">
 
                 <ImageView
-                    android:id="@+id/music_item_more"
+                    android:id="@+id/musicItemMore"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
@@ -71,8 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toStartOf="@id/music_item_more"
-                    android:layout_toLeftOf="@id/music_item_more"
+                    android:layout_toStartOf="@id/musicItemMore"
+                    android:layout_toLeftOf="@id/musicItemMore"
                     android:orientation="vertical">
 
                     <TextView
@@ -84,10 +84,10 @@
                         android:text="@{music.title}"
                         android:textColor="#333333"
                         android:textSize="16sp"
-                        tools:text="极乐净土" />
+                        tools:text="@string/tip_music_name" />
 
                     <TextView
-                        android:id="@+id/music_item_artist"
+                        android:id="@+id/musicItemArtist"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
@@ -95,7 +95,7 @@
                         android:maxLines="1"
                         android:text="@{music.artistName}"
                         android:textSize="14sp"
-                        tools:text="MARIA" />
+                        tools:text="@string/tip_music_artist" />
 
                 </LinearLayout>
 
