--- a/app/src/main/res/layout/music_notification_layout.xml
+++ b/app/src/main/res/layout/music_notification_layout.xml
@@ -1,35 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:foreground="@drawable/rect_selector">
 
     <ImageView
-        android:id="@+id/music_notification_icon_iv"
+        android:id="@+id/musicNotificationIcon"
         android:layout_width="@dimen/album_cover_size_notify"
         android:layout_height="@dimen/album_cover_size_notify"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:layout_margin="8dp"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:id="@+id/music_notification_content_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/music_notification_icon_iv"
-        android:layout_alignBottom="@id/music_notification_icon_iv"
-        android:layout_toEndOf="@id/music_notification_icon_iv"
-        android:layout_toRightOf="@id/music_notification_icon_iv"
+        android:layout_gravity="center"
+        android:layout_weight="0"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/music_notification_name_iv"
+            android:id="@+id/musicNotificationName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -37,10 +31,10 @@
             android:maxWidth="100dp"
             android:maxLines="1"
             android:textSize="14sp"
-            tools:text="权御天下" />
+            tools:text="@string/tip_music_name" />
 
         <TextView
-            android:id="@+id/music_notification_auth_iv"
+            android:id="@+id/musicNotificationArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -49,26 +43,22 @@
             android:maxLines="1"
             android:textColor="#5b5b5b"
             android:textSize="12sp"
-            tools:text="权御天下" />
+            tools:text="@string/tip_music_artist" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/music_notification_content_ll"
-        android:layout_alignBottom="@id/music_notification_content_ll"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_toEndOf="@id/music_notification_content_ll"
-        android:layout_toRightOf="@id/music_notification_content_ll"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:gravity="center_vertical|end"
         android:orientation="horizontal"
         android:paddingLeft="12dp"
         android:paddingRight="12dp">
 
         <ImageView
-            android:id="@+id/music_notification_play_iv"
+            android:id="@+id/musicNotificationStartBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -76,7 +66,7 @@
             android:src="@drawable/ic_play_circle_outline_black_24dp" />
 
         <ImageView
-            android:id="@+id/music_notification_next_iv"
+            android:id="@+id/musicNotificationNextBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -84,7 +74,7 @@
             android:src="@drawable/ic_skip_next_black_24dp" />
 
         <ImageView
-            android:id="@+id/music_notification_close_iv"
+            android:id="@+id/musicNotificationCloseBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -93,4 +83,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
