--- a/app/src/main/res/layout/music_control_frag.xml
+++ b/app/src/main/res/layout/music_control_frag.xml
@@ -17,13 +17,13 @@
 
 
         <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/musicControlSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="@{MusicPlayerRemote.duration}"
             android:maxHeight="4dp"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
-            android:progress="@{MusicPlayerRemote.progress}"
             tools:progress="30" />
 
         <LinearLayout
@@ -51,8 +51,31 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:maxLines="1"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:text="@{MusicPlayerRemote.curMusicData.title}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="?android:attr/textColorPrimary"
+                tools:text="@string/tip_music_name" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:maxLines="1"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:text="@{MusicPlayerRemote.curMusicData.artistName}"
+                android:textColor="?android:attr/textColorSecondary"
+                tools:text="@string/tip_music_artist" />
 
         </LinearLayout>
 
