--- a/app/src/main/res/layout/music_control_frag.xml
+++ b/app/src/main/res/layout/music_control_frag.xml
@@ -20,7 +20,6 @@
             android:id="@+id/musicControlSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="@{MusicPlayerRemote.duration}"
             android:maxHeight="4dp"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
@@ -34,17 +33,17 @@
             android:paddingEnd="24dp">
 
             <TextView
+                android:id="@+id/musicControlCurTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{Utils.getDurationString(MusicPlayerRemote.progress)}"
                 tools:text="11:11" />
 
             <TextView
+                android:id="@+id/musicControlTotalTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:text="@{Utils.getDurationString(MusicPlayerRemote.duration)}"
                 tools:text="11:11" />
         </LinearLayout>
 
