- 重构播放控制流程 - 添加播放列表

--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.zaze.tribe.music.vm.MusicListViewModel" />
+            type="com.zaze.tribe.music.vm.PlaylistViewModel" />
 
     </data>
 
@@ -22,7 +22,6 @@
         android:focusable="true"
         android:foreground="@drawable/rect_selector"
         android:gravity="center_vertical"
-        android:onClick="@{()-> viewModel.start(music)}"
         android:orientation="horizontal">
 
 
