--- a/app/src/main/res/layout/music_list_frag.xml
+++ b/app/src/main/res/layout/music_list_frag.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.zaze.tribe.music.MusicListViewModel" />
+            type="com.zaze.tribe.music.vm.MusicListViewModel" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,6 +20,7 @@
             android:id="@+id/musicRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:scrollbars="vertical"
             app:items="@{viewModel.musicList}" />
 
