--- a/music/src/main/res/layout/music_album_cover_item_frag.xml
+++ b/music/src/main/res/layout/music_album_cover_item_frag.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/albumCover"
+                android:id="@+id/musicAlbumCover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
