--- a/music/src/main/res/layout/music_mini_player_frag.xml
+++ b/music/src/main/res/layout/music_mini_player_frag.xml
@@ -20,7 +20,7 @@
         android:visibility="@{MusicPlayerRemote.curMusicData == null ? View.GONE : View.VISIBLE}">
 
         <ProgressBar
-            android:id="@+id/miniPlayerProgressBar"
+            android:id="@+id/musicMiniPlayerProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -32,7 +32,7 @@
             android:padding="4dp">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/miniPlayerAlbumCard"
+                android:id="@+id/musicMiniPlayerAlbumCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -50,7 +50,7 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                android:id="@+id/miniPlayerMenuLayout"
+                android:id="@+id/musicMiniPlayerMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -59,35 +59,35 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/miniPlayerStatus"
+                    android:id="@+id/musicMiniPlayerStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:layout_marginRight="4dp"
-                    android:src="@{MusicPlayerRemote.isPlaying?@drawable/ic_pause_circle_outline_black_24dp : @drawable/ic_play_circle_outline_black_24dp}"
-                    tools:src="@drawable/ic_play_circle_outline_black_24dp" />
+                    android:src="@{MusicPlayerRemote.isPlaying?@drawable/music_pause_circle_outline_black_24dp : @drawable/music_play_circle_outline_black_24dp}"
+                    tools:src="@drawable/music_play_circle_outline_black_24dp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/miniPlayerList"
+                    android:id="@+id/musicMiniPlayerList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
                     android:layout_marginRight="4dp"
-                    android:src="@drawable/ic_more_vert_black_24dp" />
+                    android:src="@drawable/music_more_vert_black_24dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/miniPlayerMenuLayout"
-                android:layout_toLeftOf="@id/miniPlayerMenuLayout"
-                android:layout_toEndOf="@id/miniPlayerAlbumCard"
-                android:layout_toRightOf="@id/miniPlayerAlbumCard"
+                android:layout_toStartOf="@id/musicMiniPlayerMenu"
+                android:layout_toLeftOf="@id/musicMiniPlayerMenu"
+                android:layout_toEndOf="@id/musicMiniPlayerAlbumCard"
+                android:layout_toRightOf="@id/musicMiniPlayerAlbumCard"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/miniPlayerTitle"
+                    android:id="@+id/musicMiniPlayerTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -99,7 +99,7 @@
                     tools:text="极乐净土极乐净土极乐净土极乐净土极乐净土" />
 
                 <TextView
-                    android:id="@+id/miniPlayerArtist"
+                    android:id="@+id/musicMiniPlayerArtist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
