--- a/music/src/main/res/layout/music_playing_queue_act.xml
+++ b/music/src/main/res/layout/music_playing_queue_act.xml
@@ -8,11 +8,11 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/playlistToolbar"
+            android:id="@+id/musicPlayingQueueToolbar"
             style="@style/Toolbar" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/playlistRecyclerView"
+            android:id="@+id/musicPlayingQueueRv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
