--- a/music/src/main/res/layout/music_playing_queue_item.xml
+++ b/music/src/main/res/layout/music_playing_queue_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.zaze.tribe.music.vm.PlaylistViewModel" />
+            type="com.zaze.tribe.music.vm.PlayingQueueViewModel" />
 
     </data>
 
@@ -53,7 +53,7 @@
                 android:paddingBottom="4dp">
 
                 <ImageView
-                    android:id="@+id/playlistItemMore"
+                    android:id="@+id/musicPlayingQueueItemMore"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
@@ -62,15 +62,15 @@
                     android:contentDescription="@null"
                     android:onClick="@{()-> viewModel.showMore(music)}"
                     android:scaleType="center"
-                    android:src="@drawable/ic_more_vert_black_24dp" />
+                    android:src="@drawable/music_more_vert_black_24dp" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toStartOf="@id/playlistItemMore"
-                    android:layout_toLeftOf="@id/playlistItemMore"
+                    android:layout_toStartOf="@id/musicPlayingQueueItemMore"
+                    android:layout_toLeftOf="@id/musicPlayingQueueItemMore"
                     android:orientation="vertical">
 
                     <TextView
