- 详情页添加收藏导航

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
                     <androidx.appcompat.widget.Toolbar
                         android:id="@+id/mainToolbar"
                         style="@style/Toolbar"
+                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                         app:layout_scrollFlags="scroll|enterAlways" />
 
                     <!--</android.support.design.widget.CollapsingToolbarLayout>-->
