- 提取 MusicNotification 处理 notification 相关操作 - 增加RouterActivity处理页面跳转

--- a/music/src/main/res/layout/music_detail_act.xml
+++ b/music/src/main/res/layout/music_detail_act.xml
@@ -22,7 +22,7 @@
 
             <fragment
                 android:id="@+id/musicDetailAlbumCoverContainer"
-                android:name="com.zaze.tribe.music.MusicAlbumCoverPagerFragment"
+                android:name="com.zaze.tribe.music.AlbumCoverPagerFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout="@layout/music_album_cover_item_frag" />
