--- a/app/src/main/res/layout/test_frag.xml
+++ b/app/src/main/res/layout/test_frag.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         tools:text="aaaa" />
 
-    <com.zaze.tribe.view.LyricView
+    <com.zaze.tribe.music.widget.LyricView
         android:id="@+id/test_lyric_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
