--- a/music/src/main/res/layout/music_detail_act.xml
+++ b/music/src/main/res/layout/music_detail_act.xml
@@ -31,7 +31,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
             <fragment
@@ -44,8 +44,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0">
+            android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/musicDetailToolbar"
