--- a/reader/src/main/res/layout/reader_act.xml
+++ b/reader/src/main/res/layout/reader_act.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <FrameLayout
@@ -7,10 +8,28 @@
         android:layout_height="match_parent">
 
 
-        <com.zaze.tribe.reader.widget.ReaderView
-            android:id="@+id/readerView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/readerProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textColor="@color/reader_text_color"
+                tools:text="0.0" />
+
+            <com.zaze.tribe.reader.widget.ReaderView
+                android:id="@+id/readerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@id/readerProgress" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
