--- a/reader/src/main/res/layout/reader_view.xml
+++ b/reader/src/main/res/layout/reader_view.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
-    <com.zaze.tribe.reader.widget.ReaderTopView
-        android:id="@+id/bookReaderTop"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="@color/red" />
+        android:layout_height="wrap_content">
 
-    <com.zaze.tribe.reader.widget.ReaderCenterView
+        <TextView
+            android:id="@+id/readerChapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textColor="@color/reader_text_color"
+            tools:text="第一章" />
+
+    </RelativeLayout>
+
+    <com.zaze.tribe.reader.widget.ReaderContentView
         android:id="@+id/bookReaderCenter"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/yellow" />
-
-    <com.zaze.tribe.reader.widget.ReaderBottomView
-        android:id="@+id/bookReaderBottom"
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="@color/blue" />
-
 </LinearLayout>
