--- a/reader/src/main/res/layout/reader_act.xml
+++ b/reader/src/main/res/layout/reader_act.xml
@@ -7,29 +7,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <RelativeLayout
+        <com.zaze.tribe.reader.widget.ReaderView
+            android:id="@+id/readerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/readerProgress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:textColor="@color/reader_text_color"
-                tools:text="0.0" />
-
-            <com.zaze.tribe.reader.widget.ReaderView
-                android:id="@+id/readerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/readerProgress" />
-        </RelativeLayout>
-
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +48,5 @@
         </LinearLayout>
 
     </FrameLayout>
-
 
 </layout>
