--- a/reader/src/main/res/layout/reader_menu_view.xml
+++ b/reader/src/main/res/layout/reader_menu_view.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="#000000"
         android:layout_height="48dp"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:background="#000000"
+        android:padding="8dp">
 
+        <TextView
+            android:id="@+id/readerNavBack"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableStart="@drawable/ic_arrow_back_white_24dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            tools:text="紫川" />
 
     </LinearLayout>
 
@@ -27,7 +38,7 @@
             android:layout_weight="1"
             android:text="上一章"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/readerMenuNext"
@@ -37,7 +48,7 @@
             android:gravity="end"
             android:text="下一章"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </FrameLayout>
