- 显示章节列表 - 显示菜单和隐藏菜单时状态栏的处理

--- a/reader/src/main/res/layout/reader_act.xml
+++ b/reader/src/main/res/layout/reader_act.xml
@@ -1,52 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <FrameLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/mainDrawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:openDrawer="start">
 
-        <com.zaze.tribe.reader.widget.ReaderView
-            android:id="@+id/readerView"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <com.zaze.tribe.reader.widget.ReaderView
+                android:id="@+id/readerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+        <!--&lt;!&ndash; Navigation Drawer &ndash;&gt;-->
+        <!--<com.google.android.material.navigation.NavigationView-->
+        <!--android:id="@+id/mainLeftNav"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--app:headerLayout="@layout/reader_catalog_layout" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_marginEnd="100dp"
             android:background="@color/white"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:padding="8dp">
 
-
-            <RelativeLayout
+            <TextView
+                android:id="@+id/readerCatalogBookName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                tools:text="紫川" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </RelativeLayout>
-
-            <View
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/readerCatalog"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </RelativeLayout>
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="1dp" />
 
         </LinearLayout>
 
-    </FrameLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
