--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
     <color name="teal">#00796B</color>
 
     <color name="red">#FFC93437</color>
@@ -17,8 +18,6 @@
     <color name="grey">#999999</color>
     <color name="orange">#F57C00</color>
     <color name="transparent">#00000000</color>
-
-
 
     <color name="half_trans">#80000000</color>
     <color name="main_split_line">#e1e1e1</color>
