--- a/music/src/main/res/layout/music_mini_player_frag.xml
+++ b/music/src/main/res/layout/music_mini_player_frag.xml
@@ -14,8 +14,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:foreground="@drawable/rect_selector"
+        android:background="@drawable/rect_selector"
         android:orientation="vertical"
         android:visibility="@{MusicPlayerRemote.curMusicData == null ? View.GONE : View.VISIBLE}">
 
