--- a/music/src/main/res/layout/music_notification_layout.xml
+++ b/music/src/main/res/layout/music_notification_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="@drawable/rect_selector">
+    android:background="@drawable/rect_selector">
 
     <ImageView
         android:id="@+id/musicNotificationIcon"
