修复最后一行文本可能无法正常显示的问题

--- a/music/src/main/res/layout/music_notification_layout.xml
+++ b/music/src/main/res/layout/music_notification_layout.xml
@@ -30,6 +30,7 @@
             android:ellipsize="end"
             android:maxWidth="100dp"
             android:maxLines="1"
+            android:textColor="#5b5b5b"
             android:textSize="14sp"
             tools:text="@string/music_tip_name" />
 
