--- a/music/src/main/res/layout/music_notification_layout.xml
+++ b/music/src/main/res/layout/music_notification_layout.xml
@@ -3,27 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rect_selector">
-
-    <ImageView
-        android:id="@+id/musicNotificationIcon"
-        android:layout_width="@dimen/music_album_cover_size_notify"
-        android:layout_height="@dimen/music_album_cover_size_notify"
-        android:layout_margin="8dp"
-        android:contentDescription="@null"
-        android:scaleType="centerCrop"
-        tools:src="@mipmap/ic_launcher" />
+    android:padding="12dp"
+    android:background="@drawable/rect_selector"
+    tools:background="@color/white">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="0"
+        android:layout_marginStart="12dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/musicNotificationName"
+            android:id="@+id/music_notification_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -32,10 +26,10 @@
             android:maxLines="1"
             android:textColor="#5b5b5b"
             android:textSize="14sp"
-            tools:text="@string/music_tip_name" />
+            tools:text="name" />
 
         <TextView
-            android:id="@+id/musicNotificationArtist"
+            android:id="@+id/music_notification_artist_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -44,7 +38,7 @@
             android:maxLines="1"
             android:textColor="#5b5b5b"
             android:textSize="12sp"
-            tools:text="@string/music_tip_artist" />
+            tools:text="artist" />
 
     </LinearLayout>
 
@@ -57,9 +51,16 @@
         android:orientation="horizontal"
         android:paddingLeft="12dp"
         android:paddingRight="12dp">
+        <ImageView
+            android:id="@+id/music_notification_pre_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:contentDescription="@null"
+            android:src="@drawable/music_skip_previous_black_24dp" />
 
         <ImageView
-            android:id="@+id/musicNotificationPlayBtn"
+            android:id="@+id/music_notification_play_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -67,7 +68,7 @@
             android:src="@drawable/music_play_circle_outline_black_24dp" />
 
         <ImageView
-            android:id="@+id/musicNotificationNextBtn"
+            android:id="@+id/music_notification_next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -75,7 +76,7 @@
             android:src="@drawable/music_skip_next_black_24dp" />
 
         <ImageView
-            android:id="@+id/musicNotificationCloseBtn"
+            android:id="@+id/music_notification_close_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -84,4 +85,12 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/music_notification_iv"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:contentDescription="@null"
+        tools:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop" />
 </LinearLayout>
